--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -1,1 +1,56 @@
 /* All styles for your header Components live here */
+.header-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.header-image {
+  width: 30%;
+  padding-right: 5px;
+  padding-top: 10px;
+}
+
+.header-image img {
+  width: 100%;
+}
+
+.header-text {
+  padding-left: 5px;
+}
+
+.header-title {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+
+.header-title p {
+  margin-block-start: 10px;
+  margin-block-end: 0;
+}
+
+.header-title-name {
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.header-title-handle{
+  color: gray;
+  font-size: .8rem;
+}
+
+.header-title-date {
+  display: inline;
+  color: gray;
+  font-size: .8rem;
+}
+
+ul {
+  padding-inline-start: 25px;
+  margin-block-start: 10px;
+  margin-block-end: 0;
+}
+
+li {
+  width: 100px;
+}
