--- a/Project-II-Calculator/calculator/src/App.css
+++ b/Project-II-Calculator/calculator/src/App.css
@@ -2,3 +2,17 @@
   display: flex;
   flex-direction: row;
 }
+
+.numbers {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 330px;
+  margin-left: 20px;
+  margin-bottom: 50px;
+}
+
+.operators {
+  display: flex;
+  flex-direction: column;
+}
