--- a/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
+++ b/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
@@ -1,12 +1,3 @@
-.number-button {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap-reverse;
-  width: 330px;
-  margin-left: 20px;
-  margin-bottom: 50px;
-}
-
 .num {
   width: 110px;
   height: 100px;
@@ -20,6 +11,7 @@
   align-items: center;
   font-weight: bold;
   font-size: 3rem;
+  background-color: white;
 }
 
 .clear {
@@ -30,11 +22,6 @@
 .zero {
   width: 100%;
   border-bottom-width: 1px;
-}
-
-.action-button {
-  display: flex;
-  flex-direction: column;
 }
 
 .operator {
